Fixed Spacing

--- a/module-2/style.css
+++ b/module-2/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #FFF2D8;
+    margin: 0 10px 0 10px;
 }
 
 h1 {
